Fix blocks on tablet

--- a/assets/styles/components/_blocks.scss
+++ b/assets/styles/components/_blocks.scss
@@ -121,14 +121,13 @@
 // 
 .two-up {
 	@include gs-media(t,min-max) {
-		@extend %t2-t7;
-			li {
-				@include gs-span(t, 2, 4, (2, 7));
-			}
-			li:nth-child(2n) {
-				@include gs-span(t, 5, 7, (2, 7));
-			}
+		li {
+			@include gs-span(t, 2, 4, (2, 7));
 		}
+		li:nth-child(2n) {
+			@include gs-span(t, 5, 7, (2, 7));
+		}
+	}
 
 	&.l-content {
 		@extend %d5-d12--within-d5-d16;
@@ -175,17 +174,16 @@
 // 
 .three-up {
 	@include gs-media(t,min-max) {
-		@extend %t2-t7;
-			li {
-				@include gs-span(t, 2, 3, (2, 7));
-			}
-			li:nth-child(2n) {
-				@include gs-span(t, 4, 5, (2, 7));
-			}
-			li:nth-child(3n) {
-				@include gs-span(t, 6, 7, (2, 7));
-			}
+		li {
+			@include gs-span(t, 2, 3, (2, 7));
 		}
+		li:nth-child(2n) {
+			@include gs-span(t, 4, 5, (2, 7));
+		}
+		li:nth-child(3n) {
+			@include gs-span(t, 6, 7, (2, 7));
+		}
+	}
 
 	&.l-content-full-width {
 		@extend %d5-d16--within-d5-d16;
@@ -206,6 +204,10 @@
 		ul  {
 			clear:left;
 		}
+	}
+
+	.lcf & {
+		text-align: center;
 	}
 
 }
